--- a/style.css
+++ b/style.css
@@ -15,13 +15,31 @@ th, td {
 }
 
 .topcorner {
-  position: absolute;
+  position: fixed;
   top: 20px;
   right: 50px;
 }
 
 .center {
-  position: absolute;
-  top: 35%;
-  left: 35%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 110px;
+  width: 50%;
+  margin-top: -5%;
+  margin-left: 34%;
+}
+
+#logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  padding-top: 190px;
+}
+
+.buttonStyle {
+  height: 40px;
+  width: 150px;
+  font-size: 20px;
 }
