--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-h1 {
-  color: blue;
-  text-align: center;
-}
-
-table {
-  border: 2px solid black;
-  border-collapse: collapse;
-  width: 400px;
-  height: 200px;
-}
-
-th, td {
-  border: 2px solid black;
-}
-
 .topcorner {
   position: fixed;
   top: 20px;
@@ -38,8 +22,78 @@ th, td {
   padding-top: 190px;
 }
 
+#input {
+  height: 45px;
+  font-size: 18px;
+  border-radius: 25px;
+  border-width:1px;
+  border-color: black;
+  padding-left: 20px;
+}
+
+#input:focus {
+  outline: none;
+  border-color: #979794;
+}
+
+#input:hover {
+  border-color: #979794;
+}
+
+#submitStyle {
+  padding-top: 6%;
+  padding-left: 7.5%;
+}
+
 .buttonStyle {
-  height: 40px;
+  height: 30px;
   width: 150px;
   font-size: 20px;
+}
+
+.feelingLucky {
+  width: 170px;
+  height: 30px;
+  font-size: 20px;
+}
+
+.leftAligned {
+  padding-top: 40px;
+  margin-left: 1%;
+}
+
+.advancedInput {
+  outline: none;
+  border-width: 1px;
+  height: 30px;
+  width: 500px;
+  font-size: 15px;
+  position: absolute;
+  left: 13%;
+}
+
+.advancedInput:focus {
+  border-color: blue;
+  @extend .advancedInput
+}
+
+#aSearchInput {
+  color: white;
+  background-color: blue;
+  position:fixed;
+  font-size: 12px;
+  height: 25px;
+  width: 110px;
+  left: 34.5%;
+  top: 48%;
+}
+
+.link {
+  color: black;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: grey;
+  text-decoration: underline;
 }
